active and inactive states now show as they should

--- a/app/assets/javascripts/templates/todos/index.hbs
+++ b/app/assets/javascripts/templates/todos/index.hbs
@@ -1,3 +1,4 @@
+{{debug 'in todos/index'}}
 <ul id="todo-list">
 	{{#each itemController="todo"}}
 		<li {{bind-attr class="isCompleted:completed isEditing:editing"}}>
